2008-09-22  Deborah S. Townsend  <dstownse@us.ibm.com>

	* sysdeps/s390/s390-64/s390x-mcount.S: Replace ahi with aghi.
	* sysdeps/unix/sysv/linux/s390/s390-64/socket.S: Likewise.

2008-09-16  Ulrich Drepper  <drepper@redhat.com>

	* dlfcn/dlopen.c (dlopen_doit): Allow __RTLD_SPROF flag.
	Patch by Olivier Fourdan <ofourdan@redhat.com>.

2008-09-15  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/rpc/svc.h: Declare svcfd_create.
	Patch by Michael Solberg <msolberg@redhat.com>.

2008-09-12  Flavio Leitner  <fleitner@redhat.com>
            Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (public_vALLOc): Try other arenas in case
	_int_valloc fails.
	(public_pVALLOc): Likewise.

2008-09-02  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/s390/s390-32/utmp-convert.h: Fix last
	commit.

2008-08-26  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #6860]
	* hurd/hurd/signal.h (HURD_MSGPORT_RPC): Fix a typo.

2008-07-18  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile (check-data): Check data directory in add-ons.
	* elf/Makefile (check-data): Likewise.

2008-08-18  Roland McGrath  <roland@redhat.com>

	* configure.in (--with-cpu): Check compiler support for -march/-mcpu.
	* configure: Regenerated.
	* config.make.in (cflags-cpu): New substituted variable.
	(with-cpu): Variable removed.
	* Makeconfig (+cflags): Use $(cflags-cpu), not $(with-cpu).

2008-08-14  Ryan S. Arnold  <rsa@us.ibm.com>

	[BZ #6845]
	* sysdeps/powerpc/fpu/bits/mathinline.h (__signbitl): Copy new
	__signbitl definition and __LONG_DOUBLE_128__ guard from:
	* sysdeps/unix/sysv/linux/powerpc/bits/mathinline.h: Remove as
	redundant.  Functions which call floating point assembler operations
	should go into a sysdeps powerpc/fpu directory.

2008-08-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h: Define MAP_STACK.
	* sysdeps/unix/sysv/linux/i386/bits/mman.h: Likewise.

2008-08-14  Ulrich Drepper  <drepper@redhat.com>
