@@ -31,7 +31,4 @@ libc {
     # Addition from P1003.1-200x
     sockatmark;
   }
-  GLIBC_2.9 {
-    paccept;
-  }
 }
