@@ -214,18 +214,6 @@ extern int listen (int __fd, int __n) __THROW;
 extern int accept (int __fd, __SOCKADDR_ARG __addr,
 		   socklen_t *__restrict __addr_len);
 
-#ifdef __USE_GNU
-/* Variant of the accept function which takes additional parameters.  The
-   MASK parameter allows to change the thread signal mask for the duration
-   of the call.  The FLAGS parameter allows to pass additional flags.
-
-   This function is a cancellation point and therefore not marked with
-   __THROW.  */
-extern int paccept (int __fd, __SOCKADDR_ARG __addr,
-		    socklen_t *__restrict __addr_len,
-		    __const __sigset_t *__restrict __ss, int __flags);
-#endif
-
 /* Shut down all or part of the connection open on socket FD.
    HOW determines what to shut down:
      SHUT_RD   = No more receptions;
